--- a/expense_tracker/pubspec.yaml
+++ b/expense_tracker/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  freezed: ^2.5.8
+  cached_network_svg_image: any
+  path_provider: ^2.1.5
+  flutter_cache_manager: ^3.4.1
+  cached_network_image: any
+  flutter_slidable: ^4.0.0
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +53,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  build_runner:
+  custom_lint:
+  flutter_lints: ^2.0.1
+  riverpod_generator: ^2.6.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,17 +85,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: sfpro
+      fonts:
+        - asset: lib/assets/fonts/sfproregular.otf
+        - asset: lib/assets/fonts/sfpromedium.otf
+        - asset: lib/assets/fonts/sfprobold.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
